dark mode solved full page

--- a/nuxtproject/assets/css/main.scss
+++ b/nuxtproject/assets/css/main.scss
@@ -11,10 +11,7 @@ body {
 .dark-mode {
   background-color: #282828;
   color: #fff;
-}
-
-.full-height {
-  height: 100vh;
+  min-height: 98vh;
 }
 
 a:nth-child(1) {
